--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,9 +39,14 @@ jobs:
       - name: Archive production build
         run: tar -czf dist.tar.gz dist/
 
+      - name: Get latest tag
+        id: get_tag
+        run: echo "tag=$(git describe --tags --abbrev=0)" >> $GITHUB_OUTPUT
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ steps.get_tag.outputs.tag }}
           body_path: CHANGELOG.md
           files: |
             dist.tar.gz
