--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:coverage": "jest --coverage",
     "prerender": "ng run portfolio:prerender",
     "lint": "ng lint",
-    "release": "standard-version"
+    "release": "standard-version",
+    "postbuild": "cp src/_redirects dist/portfolio/_redirects"
   },
   "private": true,
   "dependencies": {
